tests/snapshots/bat_tmtheme_snapshots__bat_tmtheme@solarized-dark.snap
---
source: tests/bat_tmtheme_snapshots.rs
expression: xml
---
<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN"
  "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
<plist version="1.0">
<dict>
    <key>name</key>
    <string>slate-solarized-dark</string>
    <key>settings</key>
    <array>
        <dict>
            <key>settings</key>
            <dict>
                <key>background</key>
                <string>#002b36</string>
                <key>foreground</key>
                <string>#839496</string>
                <key>caret</key>
                <string>#cb4b16</string>
                <key>selection</key>
                <string>#073642</string>
                <key>lineHighlight</key>
                <string>#073642</string>
                <key>invisibles</key>
                <string>#586e75</string>
                <key>gutter</key>
                <string>#002b36</string>
                <key>gutterForeground</key>
                <string>#586e75</string>
            </dict>
        </dict>
        <dict>
            <key>name</key>
            <string>Comment</string>
            <key>scope</key>
            <string>comment, punctuation.definition.comment</string>
            <key>settings</key>
            <dict>
                <key>foreground</key>
                <string>#586e75</string>
                <key>fontStyle</key>
                <string>italic</string>
            </dict>
        </dict>
        <dict>
            <key>name</key>
            <string>String</string>
            <key>scope</key>
            <string>string, constant.other.symbol</string>
            <key>settings</key>
            <dict>
                <key>foreground</key>
                <string>#859900</string>
            </dict>
        </dict>
        <dict>
            <key>name</key>
            <string>Keyword</string>
            <key>scope</key>
            <string>keyword, storage.type, storage.modifier</string>
            <key>settings</key>
            <dict>
                <key>foreground</key>
                <string>#e16ba5</string>
            </dict>
        </dict>
        <dict>
            <key>name</key>
            <string>Constant</string>
            <key>scope</key>
            <string>constant, constant.numeric</string>
            <key>settings</key>
            <dict>
                <key>foreground</key>
                <string>#b58900</string>
            </dict>
        </dict>
        <dict>
            <key>name</key>
            <string>Function</string>
            <key>scope</key>
            <string>entity.name.function, support.function</string>
            <key>settings</key>
            <dict>
                <key>foreground</key>
                <string>#5fafee</string>
            </dict>
        </dict>
        <dict>
            <key>name</key>
            <string>Type</string>
            <key>scope</key>
            <string>entity.name.type, entity.name.class, support.class</string>
            <key>settings</key>
            <dict>
                <key>foreground</key>
                <string>#2aa198</string>
            </dict>
        </dict>
        <dict>
            <key>name</key>
            <string>Variable</string>
            <key>scope</key>
            <string>variable, variable.parameter</string>
            <key>settings</key>
            <dict>
                <key>foreground</key>
                <string>#839496</string>
            </dict>
        </dict>
        <dict>
            <key>name</key>
            <string>Operator</string>
            <key>scope</key>
            <string>keyword.operator</string>
            <key>settings</key>
            <dict>
                <key>foreground</key>
                <string>#839496</string>
            </dict>
        </dict>
        <dict>
            <key>name</key>
            <string>Tag</string>
            <key>scope</key>
            <string>entity.name.tag</string>
            <key>settings</key>
            <dict>
                <key>foreground</key>
                <string>#e16ba5</string>
            </dict>
        </dict>
        <dict>
            <key>name</key>
            <string>Attribute</string>
            <key>scope</key>
            <string>entity.other.attribute-name</string>
            <key>settings</key>
            <dict>
                <key>foreground</key>
                <string>#b58900</string>
            </dict>
        </dict>
        <dict>
            <key>name</key>
            <string>Markup Inserted</string>
            <key>scope</key>
            <string>markup.inserted</string>
            <key>settings</key>
            <dict>
                <key>foreground</key>
                <string>#859900</string>
            </dict>
        </dict>
        <dict>
            <key>name</key>
            <string>Markup Deleted</string>
            <key>scope</key>
            <string>markup.deleted</string>
            <key>settings</key>
            <dict>
                <key>foreground</key>
                <string>#ea6e60</string>
            </dict>
        </dict>
        <dict>
            <key>name</key>
            <string>Markup Changed</string>
            <key>scope</key>
            <string>markup.changed</string>
            <key>settings</key>
            <dict>
                <key>foreground</key>
                <string>#b58900</string>
            </dict>
        </dict>
        <dict>
            <key>name</key>
            <string>Markup Heading</string>
            <key>scope</key>
            <string>markup.heading</string>
            <key>settings</key>
            <dict>
                <key>foreground</key>
                <string>#5fafee</string>
            </dict>
        </dict>
        <dict>
            <key>name</key>
            <string>Markup Bold</string>
            <key>scope</key>
            <string>markup.bold</string>
            <key>settings</key>
            <dict>
                <key>foreground</key>
                <string>#e16ba5</string>
                <key>fontStyle</key>
                <string>bold</string>
            </dict>
        </dict>
        <dict>
            <key>name</key>
            <string>Markup Italic</string>
            <key>scope</key>
            <string>markup.italic</string>
            <key>settings</key>
            <dict>
                <key>foreground</key>
                <string>#e16ba5</string>
                <key>fontStyle</key>
                <string>italic</string>
            </dict>
        </dict>
        <dict>
            <key>name</key>
            <string>Regular Expression</string>
            <key>scope</key>
            <string>string.regexp</string>
            <key>settings</key>
            <dict>
                <key>foreground</key>
                <string>#b58900</string>
            </dict>
        </dict>
        <dict>
            <key>name</key>
            <string>Escape Sequence</string>
            <key>scope</key>
            <string>constant.character.escape</string>
            <key>settings</key>
            <dict>
                <key>foreground</key>
                <string>#2aa198</string>
            </dict>
        </dict>
        <dict>
            <key>name</key>
            <string>Invalid</string>
            <key>scope</key>
            <string>invalid.illegal</string>
            <key>settings</key>
            <dict>
                <key>foreground</key>
                <string>#002b36</string>
                <key>background</key>
                <string>#ea6e60</string>
            </dict>
        </dict>
        <dict>
            <key>name</key>
            <string>Diff Meta</string>
            <key>scope</key>
            <string>meta.diff, meta.diff.header</string>
            <key>settings</key>
            <dict>
                <key>foreground</key>
                <string>#5fafee</string>
            </dict>
        </dict>
    </array>
    <key>uuid</key>
    <string>b98c76e5-4410-5dd2-82d7-3f0c5441b210</string>
</dict>
</plist>
